Add CORS whitelist, rate limiter and deploy CI
Add a GitHub Actions workflow to build, push the backend Docker image and deploy to EC2 (uses DockerHub creds and SSH). Add bucket4j dependency to pom.xml and introduce a reactive RateLimitFilter component that enforces a per-IP rate limit (50 requests/min). Update CorsGlobalConfiguration to set explicit allowed origins, methods (including PATCH) and allowed headers, and enable credentials.